k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: cadu.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port:
              number: 80
      - path: /about
        pathType: Prefix
        backend:
          service:
            name: about-svc
            port:
              number: 80
      - path: /contact
        pathType: Prefix
        backend:
          service:
            name: contact-svc
            port:
              number: 80
